2008-10-24  Sam Weinig  <sam@webkit.org>

        Fix windows build.

        * page/Chrome.cpp:
        * page/Chrome.h:

2008-10-24  Sam Weinig  <sam@webkit.org>

        Fix Qt build.

        * platform/qt/FileChooserQt.cpp:

2008-10-24  Sam Weinig  <sam@webkit.org>

        Reviewed by Dan Bernstein.

        Fix https://bugs.webkit.org/show_bug.cgi?id=21759
        Layering violation: FileChooser should not depend on Document/Frame/Page

        Move file choosing into WebKit ChromeClient.

        * loader/EmptyClients.h:
        (WebCore::EmptyChromeClient::runOpenPanel):
        * page/Chrome.cpp:
        (WebCore::Chrome::runOpenPanel):
        * page/Chrome.h:
        * page/ChromeClient.h:
        * page/mac/ChromeMac.mm:
        * platform/FileChooser.h:
        * platform/mac/FileChooserMac.mm:
        * platform/qt/FileChooserQt.cpp:
        * platform/win/FileChooserWin.cpp:
        * platform/wx/TemporaryLinkStubs.cpp:
        * rendering/RenderFileUploadControl.cpp:
        (WebCore::RenderFileUploadControl::click):

2008-10-24  Kevin Ollivier  <kevino@theolliviers.com>

        wx build fix - add newIconForFiles stub.

        * platform/wx/TemporaryLinkStubs.cpp:
        (Icon::newIconForFiles):

2008-10-24  Kevin Watters  <kevinwatters@gmail.com>

        Reviewed by Kevin Ollivier.

        Use the CGFont metrics APIs for more accurate measurements, and tweak the y
        value the text is drawn at (it was a couple pixels off before because wx
        internally adds to the y value.

        https://bugs.webkit.org/show_bug.cgi?id=21853

        * platform/wx/wxcode/mac/carbon/fontprops.cpp:
        (wxFontProperties::wxFontProperties):
        * platform/wx/wxcode/mac/carbon/non-kerned-drawing.cpp:
        (WebCore::drawTextWithSpacing):

2008-10-24  Eric Seidel  <eric@webkit.org>

        Reviewed by Sam Weinig.

        Generate missing constructors and add test to prevent missing ones in the future