@@ -161,12 +161,18 @@ bool RuntimeObjectImp::getOwnPropertySlot(ExecState *exec, const Identifier& pro
     }
         
     instance->end();
-
-    // don't call superclass, because runtime objects can't have custom properties or a prototype
+#if PLATFORM(QT)
+    // For Qt instances we call the baseclass implementation to allow
+    // runtime objects to have custom properties or a prototype
+    if (instance->getBindingLanguage() == Instance::QtLanguage)
+        return JSObject::getOwnPropertySlot(exec, propertyName, slot);
+#endif
+    // For other platforms and/or binding languages we don't allow
+    // runtime properties/prototypes
     return false;
 }
 
-void RuntimeObjectImp::put(ExecState* exec, const Identifier& propertyName, JSValue* value, PutPropertySlot&)
+void RuntimeObjectImp::put(ExecState* exec, const Identifier& propertyName, JSValue* value, PutPropertySlot& slot)
 {
     if (!instance) {
         throwInvalidAccessError(exec);
@@ -182,6 +188,10 @@ void RuntimeObjectImp::put(ExecState* exec, const Identifier& propertyName, JSVa
         instance->setValueOfField(exec, aField, value);
     else if (instance->supportsSetValueOfUndefinedField())
         instance->setValueOfUndefinedField(exec, propertyName, value);
+#if PLATFORM(QT)
+    else if (instance->getBindingLanguage() == Instance::QtLanguage)
+        JSObject::put(exec,  propertyName, value, slot);
+#endif
 
     instance->end();
 }
